--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -1,22 +1,22 @@
-name: Build and Push Docker Image
+name: Build and Push Docker Image名称：构建和推送Docker镜像名称：构建和推送Docker镜像
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main    分支：   分支：[主][主]]
     paths:
       - 'Dockerfile'
       - 'index.js'
       - 'package.json'
   pull_request:
-    branches: [ main ]
+    branches: [ main    分支：   分支：[主][主]]
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest   上运行   上运行:ubuntu-latest:ubuntu-latest
     permissions:
-      contents: read
-      packages: write
+      contents: read   内容   内容:读:读
+      packages: write   包   包:写:写
 
     steps:
       - name: Checkout repository
@@ -29,17 +29,17 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx—name：安装Docker Buildx—name：安装Docker Buildx
+        uses: docker/setup-buildx-action@v3用途用途:码头工人/ setup-buildx-action@v3:码头工人/ setup-buildx-action@v3
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
+      - name   名字: Build and push Docker image
+        uses   使用: docker/build-push-action@v5用途用途:码头工人/ build-push-action@v5:码头工人/ build-push-action@v5
+        with   与:
           context: .
-          push: true
+          push   推: true   真正的
           platforms: linux/amd64,linux/arm64
           tags: |
-            ghcr.io/${{ github.repository_owner }}/nodejs:latest
+            ghcr.io/${{ github.repository_owner }}/994793201:2025
           labels: |
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
             org.opencontainers.image.description=HTTP Server
